# tf2jsonchema

./: .gitignore  pyproject.toml  tf2jsonschema.py
